<?xml version="1.0"?>
<package>
  <name>object_manager</name>
  <version>0.0.9</version>
  <description>The object_manager package</description>

  <maintainer email="raambrus@kth.se">Rares Ambrus</maintainer>


  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>qt_ros</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>semantic_map</build_depend>
  <build_depend>metaroom_xml_parser</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>qt_ros</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>semantic_map</run_depend>
  <run_depend>metaroom_xml_parser</run_depend>
  <run_depend>qt_build</run_depend>

  <export>
  </export>
</package>
