<?xml version="1.0"?>
<package>
  <name>object_view_generator</name>
  <version>0.0.23</version>
  <description>
    This package provides a node supplying a service to generate a set of view 
    points aound a given object.
  </description>

  <maintainer email="cburbridge@gmail.com">Chris Burbridge</maintainer>
  <author email="cburbridge@gmail.com">Chris Burbridge</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
